# site-source

./: index.html  package.yaml  publish.janet  publish.mts  publish.rkt  site  site.cabal  site.hi  site.hs  stack.yaml  syncFiles.txt
css/: crt_effects.css  default.css
files/: for_you.html  private-build-plans.toml  pub.asc  resume.tex
js/: smeter.js
nix/: sources.json
pages/: about.org  contact.org  quotes.org
pages/_cache/: -3474146600614548372  -5185344883098693007  -6621491990995001060
pages/_site/: feed
pages/_site/css/: syntax.css
posts/: 2021-11-27-emacs-config.org  2021-12-18-switching-to-meow.org  2022-02-17-400-days-of-spaced-repetition.org  2022-04-07-dvorak-and-editing.org  2022-06-20-legend-of-the-galactic-heroes.org  2022-07-25-gnuradio-ofdm.org  2022-09-18-quitting-anki.org  2023-03-23-clojure.org  2024-01-29-meow-response.org  2024-02-25-spectral-blessing.org  2025-02-11-lisp.org  2025-11-15-hk.org  2025-11-15-year-recap.org
templates/: archive.html  default.html  post-list.html  post.html
